--- a/leaderboard.css
+++ b/leaderboard.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-.quiz {
+.leaderBoard {
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
@@ -11,5 +11,5 @@ body {
     width: 50%;
     border: 3px solid #527b18;
     padding: 10px;
-
+    text-align: center;
 }
