--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-.quiz {
+#quiz {
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
